chore(eslint-config): enforce consistent import order with eslint-plugin-import

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,37 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "prettier"
+  ],
   "env": {
     "es2021": true,
     "node": true
   },
+  "plugins": ["import"],
   "rules": {
-    "no-console": "error"
+    "no-console": "error",
+    "no-unused-vars": [
+      "warn",
+      { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
+    ],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "newlines-between": "always"
+      }
+    ],
+    "import/newline-after-import": "error"
   }
 }
